--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "@adonisjs/view": "^3.1.0",
     "gravatar": "^1.8.1",
     "luxon": "^1.25.0",
+    "mysql": "^2.18.1",
     "phc-argon2": "^1.0.11",
     "phc-bcrypt": "^1.0.4",
     "proxy-addr": "^2.0.6",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.19",
-    "sqlite3": "^5.0.0"
+    "source-map-support": "^0.5.19"
   }
 }
